--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width ,initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <link rel="stylesheet" href="../static/css/me.css">
+    <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.css}">
     <title>首页</title>
 </head>
 <body>
@@ -429,7 +429,7 @@
                         扫码关注我
                     </h4>
                     <div class="ui centered card " style="width: 11em">
-                        <img src="../static/images/avatar.jpg" alt="" class="ui rounded image" >
+                        <img src="../static/images/avatar.jpg" th:src="@{/images/avatar.jpg}" alt="" class="ui rounded image" >
                     </div>
                 </div>
             </div>
@@ -447,7 +447,7 @@
                 <div class="three wide column">
                     <div class="ui inverted link list">
                         <div class="item">
-                            <img src="../static/images/avatar.jpg" class="ui rounded image" style="width: 110px" alt="">
+                            <img src="../static/images/avatar.jpg" th:src="@{/images/avatar.jpg}" class="ui rounded image" style="width: 110px" alt="">
                         </div>
                     </div>
 
