--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -39,6 +39,46 @@
 
 </nav>
 
+<!--底部-->
+<!--vertical 去掉圆角-->
+<footer th:fragment="footer" class="ui inverted vertical segment m-padded-tb-massive" >
+    <!--center aligned 居中-->
+    <div class="ui center aligned container">
+        <div class="ui inverted divided stackable grid">
+            <!--                3 3 3 7 分为16份-->
+            <div class="three wide column">
+                <div class="ui inverted link list">
+                    <div class="item">
+                        <img src="../static/images/avatar.jpg" th:src="@{/images/avatar.jpg}" class="ui rounded image" style="width: 110px" alt="">
+                    </div>
+                </div>
 
+            </div>
+            <div class="three wide column">
+                <h4 class="ui inverted header m-text-thin m-text-spaced" >最新博客</h4>
+                <div class="ui inverted link list">
+                    <a href="#" class="item">用户故事</a>
+                    <a href="#" class="item">用户故事</a>
+                    <a href="#" class="item">用户故事</a>
+                </div>
+            </div>
+            <div class="three wide column">
+                <h4 class="ui inverted header m-text-thin m-text-spaced">联系我</h4>
+                <div class="ui inverted link list">
+                    <a href="#" class="item">用户故事</a>
+                    <a href="#" class="item">用户故事</a>
+                    <a href="#" class="item">用户故事</a>
+                </div>
+            </div>
+            <div class="seven wide column">
+                <h4 class="ui inverted header m-text-thin m-text-spaced">Blog</h4>
+                <p class="m-text-thin m-text-spaced m-opacity-mini">这是一个博客，这是一个博客，这是一个博客，这是一个博客，这是一个博客，这是一个博客</p>
+            </div>
+        </div>
+        <div class="ui inverted section divider "></div>
+        <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020-2021 Aaron All Rights Reserved</p>
+    </div>
+
+</footer>
 </body>
 </html>
