--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -440,7 +440,7 @@
     </div>
 <!--底部-->
     <!--vertical 去掉圆角-->
-    <footer class="ui inverted vertical segment m-padded-tb-massive" >
+    <footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive" >
         <!--center aligned 居中-->
         <div class="ui center aligned container">
             <div class="ui inverted divided stackable grid">
@@ -456,7 +456,7 @@
                 <div class="three wide column">
                     <h4 class="ui inverted header m-text-thin m-text-spaced" >最新博客</h4>
                     <div class="ui inverted link list">
-                        <a href="#" class="item">用户故事</a>
+                        <a href="#" class="item">用户故事kk</a>
                         <a href="#" class="item">用户故事</a>
                         <a href="#" class="item">用户故事</a>
                     </div>
