--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -479,8 +479,11 @@
         </div>
 
     </footer>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+<!-- 左右加/*/ 在html中是注释，但是模板中有效-->
+<!--/*/<th:block th:replace="_fragments :: script">/*/-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+<!--/*/</th:block>/*/-->
 <script>
     $('.menu.toggle').click(function () {
         /*toggleClass 有则去除没有则加上*/
