--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -56,81 +56,11 @@
     <div class="m-container-small m-padded-tb-big">
         <!--container 响应移动端-->
         <div class="ui container">
-            <form action="#" method="post" class="ui form segment">
-                <!--默认是占满宽度，inline 就缩小宽度-->
-                <div class="inline fields">
-                    <div class="field">
-                        <input type="text" name="title" placeholder="标题">
-                    </div>
-
-                    <div class="field">
-                        <div class="ui selection dropdown">
-                            <input type="hidden" name="type">
-                            <i class="dropdown icon"></i>
-                            <div class="default text">分类</div>
-                            <div class="menu">
-                                <!--data-value="1" 为传入后端的值-->
-                                <div class="item" data-value="1">开发者手册</div>
-                                <div class="item" data-value="2">开发者手册2</div>
-                                <div class="item" data-value="3">开发者手册3</div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="field">
-                        <div class="ui checkbox">
-                            <input type="checkbox" id="recommend" name="recommend">
-                            <!--关联上面recommend 的 id-->
-                            <label for="recommend">推荐</label>
-                        </div>
-                    </div>
-
-                    <div class="field">
-                        <button class="ui mini teal basic button"> <i class="search icon"></i>搜索</button>
-                    </div>
-
-                </div>
-            </form>
-            <!--celled网格线-->
-            <table class="ui celled table">
-                <thead>
-                <tr>
-                    <th></th>
-                    <th>标题</th>
-                    <th>类型</th>
-                    <th>推荐</th>
-                    <th>更新时间</th>
-                    <th>操作</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>可以练习</td>
-                    <td>认知升级</td>
-                    <td>是</td>
-                    <td>2020-08-12 09:45</td>
-                    <td>
-                        <a href="#" class="ui mini teal basic button">编辑</a>
-                        <a href="#" class="ui mini red basic button">删除</a>
-                    </td>
-
-                </tr>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <th colspan="6">
-                            <div class="ui mini pagination menu">
-                                <a class="item">上一页</a>
-                                <a class="item">下一页</a>
-                            </div>
-                            <a href="#" class="ui mini right floated teal basic button">新增</a>
-                        </th>
-                    </tr>
-                </tfoot>
-            </table>
-
-
+            <div class="ui success large message">
+                <h3>Hi,</h3>
+                <p>Aaron,欢迎登录！</p>
+            </div>
+            <img src="http://lorempixel.com/1000/400/" alt="" class="ui rounded bordered fluid image">
         </div>
     </div>
 <!--底部-->
