--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="admin/_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width ,initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
@@ -10,7 +10,7 @@
 <body>
 <!--导航-->
     <!--m 自定义 间距 上下 -->
-    <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+    <nav th:replace="admin/_fragments :: menu(0)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
         <div class="ui container">
             <div class="ui inverted secondary stackable menu">
                 <h2 class="ui teal header item">管理后台</h2>
@@ -65,7 +65,7 @@
     </div>
 <!--底部-->
     <!--vertical 去掉圆角-->
-    <footer class="ui inverted vertical segment m-padded-tb-massive" >
+    <footer th:replace="admin/_fragments :: footer"class="ui inverted vertical segment m-padded-tb-massive" >
         <!--center aligned 居中-->
         <div class="ui center aligned container">
             <div class="ui inverted divided stackable grid">
@@ -104,8 +104,12 @@
         </div>
 
     </footer>
+<!-- 左右加/*/ 在html中是注释，但是模板中有效-->
+<!--/*/<th:block th:replace="_fragments :: script">/*/-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+<!--/*/</th:block>/*/-->
+
 <script>
     $('.menu.toggle').click(function () {
         /*toggleClass 有则去除没有则加上*/
