--- a/src/main/resources/templates/admin/type-input.html
+++ b/src/main/resources/templates/admin/type-input.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="admin/_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width ,initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="../../static/lib/editormd/css/editormd.min.css">
 
     <link rel="stylesheet" href="../../static/css/me.css">
-    <title>博客发布</title>
+    <title>分类新增</title>
 </head>
 <body>
 <!--导航-->
     <!--m 自定义 间距 上下 -->
-    <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+<nav th:replace="admin/_fragments :: menu(2)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
         <div class="ui container">
             <div class="ui inverted secondary stackable menu">
                 <h2 class="ui teal header item">管理后台</h2>
@@ -173,7 +173,7 @@
     </div>
 <!--底部-->
     <!--vertical 去掉圆角-->
-    <footer class="ui inverted vertical segment m-padded-tb-massive" >
+    <footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive" >
         <!--center aligned 居中-->
         <div class="ui center aligned container">
             <div class="ui inverted divided stackable grid">
@@ -212,32 +212,14 @@
         </div>
 
     </footer>
+<!-- 左右加/*/ 在html中是注释，但是模板中有效-->
+<!--/*/<th:block th:replace="_fragments :: script">/*/-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-
-<script src="../../static/lib/editormd/editormd.min.js"></script>
+<!--/*/</th:block>/*/-->
 
 <script>
-    /*初始化markdown编辑器*/
-    var contentEditor;
-    $(function() {
-        contentEditor = editormd("md-content", {
-            width   : "100%",
-            height  : 640,
-            syncScrolling : "single",
-            path    : "../static/lib/editormd/lib/"
-        });
 
-        /*
-        // or
-        testEditor = editormd({
-            id      : "test-editormd",
-            width   : "90%",
-            height  : 640,
-            path    : "../lib/"
-        });
-        */
-    });
     
     
     $('.menu.toggle').click(function () {
@@ -247,20 +229,6 @@
 
     $('.ui.dropdown').dropdown({
         on:'hover'
-    });
-    /*表单数据校验*/
-    $('.ui.form').form({
-        fields : {
-            title : {
-                identifier : 'title',
-                rules : [{
-                    /*非空校验*/
-                    type : 'empty',
-                    prompt : '标题：请输入博客标题'
-
-                }]
-            }
-        }
     });
 </script>
 </body>
