修改查询前端页面

--- a/src/main/resources/templates/admin/types.html
+++ b/src/main/resources/templates/admin/types.html
@@ -66,12 +66,14 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>可以练习</td>
+                <!--iterStat 为索引值-->
+                <tr th:each="type,iterStat : ${page.content}">
+                    <td th:text="${iterStat.count}">1</td>
+                    <td th:text="${type.name}">可以练习</td>
                     <td>
-                        <a href="#" class="ui mini teal basic button">编辑</a>
-                        <a href="#" class="ui mini red basic button">删除</a>
+                        <!--前面id会被type.id替换掉-->
+                        <a href="#" th:href="@{/admin/types/{id}/input(id=${type.id}})" class="ui mini teal basic button">编辑</a>
+                        <a href="#" th:href="@{/admin/types/{id}/delete(id=${type.id}})" class="ui mini red basic button">删除</a>
                     </td>
 
                 </tr>
@@ -80,10 +82,10 @@
                     <tr>
                         <th colspan="6">
                             <div class="ui mini pagination menu">
-                                <a class="item">上一页</a>
-                                <a class="item">下一页</a>
+                                <a th:href="@{/admin/types/(page=${page.number}-1)}" class="item">上一页</a>
+                                <a th:href="@{/admin/types/(page=${page.number}+1)}" class="item">下一页</a>
                             </div>
-                            <a href="#" class="ui mini right floated teal basic button">新增</a>
+                            <a th:href="@{/admin/types/input}" class="ui mini right floated teal basic button">新增</a>
                         </th>
                     </tr>
                 </tfoot>
