--- a/src/main/resources/templates/admin/types-input.html
+++ b/src/main/resources/templates/admin/types-input.html
@@ -47,8 +47,8 @@
     <div class="ui container">
         <div class="ui attached pointing menu">
             <div class="ui right menu">
-                <a href="#" class="active teal item">发布</a>
-                <a href="#" class="item">列表</a>
+                <a href="#" th:href="@{/admin/types/input}" class="active teal item">发布</a>
+                <a href="#" th:href="@{/admin/types/}" class="item">列表</a>
             </div>
 
         </div>
