--- a/src/main/resources/templates/admin/tags-input.html
+++ b/src/main/resources/templates/admin/tags-input.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../static/lib/editormd/css/editormd.min.css">
 
     <link rel="stylesheet" href="../../static/css/me.css">
-    <title>分类新增</title>
+    <title>标签新增</title>
 </head>
 <body>
 <!--导航-->
@@ -17,9 +17,9 @@
         <div class="ui container">
             <div class="ui inverted secondary stackable menu">
                 <h2 class="ui teal header item">管理后台</h2>
-                <a href="#" class="active m-item item m-mobile-hide"><i class="home icon"></i>博客</a>
+                <a href="#" class="m-item item m-mobile-hide"><i class="home icon"></i>博客</a>
                 <a href="#" class="m-item item m-mobile-hide"><i class="idea icon"></i>分类</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="target icon"></i>标签</a>
+                <a href="#" class="active m-item item m-mobile-hide"><i class="target icon"></i>标签</a>
                 <div class="right m-item m-mobile-hide menu">
 
                     <div class="ui dropdown item">
@@ -47,8 +47,8 @@
     <div class="ui container">
         <div class="ui attached pointing menu">
             <div class="ui right menu">
-                <a href="#" th:href="@{/admin/types/input}" class="active teal item">发布</a>
-                <a href="#" th:href="@{/admin/types/}" class="item">列表</a>
+                <a href="#" th:href="@{/admin/tags/input}" class="active teal item">发布</a>
+                <a href="#" th:href="@{/admin/tags/}" class="item">列表</a>
             </div>
 
         </div>
@@ -59,13 +59,13 @@
     <div class="m-container-small m-padded-tb-big">
         <!--container 响应移动端-->
         <div class="ui container">
-            <form action="#" method="post" th:action="*{id}==null ? @{/admin/types} : @{/admin/types/{id}(id=*{id})}" th:object="${type}"  class="ui form">
+            <form action="#" method="post" th:action="*{id}==null ? @{/admin/tags} : @{/admin/tags/{id}(id=*{id})}" th:object="${tag}"  class="ui form">
                 <input type="hidden" name="id" th:value="*{id}">
-
+                
                 <div class="required field">
                     <div class="ui left labeled input">
                         <label  class="ui teal basic label">名称</label>
-                        <input type="text" name="name" placeholder="分类名称" th:value="*{name}">
+                        <input type="text" name="name" placeholder="标签名称" th:value="*{name}">
                     </div>
 
                 </div>
@@ -159,7 +159,7 @@
                 identifier:'name',
                 rules:[{
                     type:'empty',
-                    prompt:'请输入分类'
+                    prompt:'请输入标签'
                 }]
             }
         }
