--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -24,8 +24,8 @@
 
                 <div class="ui dropdown item">
                     <div class="text">
-                        <img src="http://lorempixel.com/100/100/" alt="" class="ui avatar image">
-                        Aaron
+                        <img  src="http://lorempixel.com/100/100/" th:src="@{${session.user.avatar}}" alt="" class="ui avatar image">
+                        <span th:text="@{${session.user.nickname}}">Aaron</span>
                     </div>
                     <i class="dropdown icon"></i>
                     <div class="menu">
