--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -56,7 +56,7 @@
     <div class="m-container-small m-padded-tb-big">
         <!--container 响应移动端-->
         <div class="ui container">
-            <form action="#" method="post" class="ui form segment">
+            <form action="#" method="post" class="ui form secondary segment">
                 <!--默认是占满宽度，inline 就缩小宽度-->
                 <div class="inline fields">
                     <div class="field">
@@ -92,7 +92,7 @@
                 </div>
             </form>
             <!--celled网格线-->
-            <table class="ui celled table">
+            <table class="ui compact teal table">
                 <thead>
                 <tr>
                     <th></th>
