--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="admin/_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width ,initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
@@ -13,7 +13,7 @@
 <body>
 <!--导航-->
     <!--m 自定义 间距 上下 -->
-    <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+    <nav th:replace="admin/_fragments :: menu(1)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
         <div class="ui container">
             <div class="ui inverted secondary stackable menu">
                 <h2 class="ui teal header item">管理后台</h2>
@@ -56,10 +56,11 @@
 
 
 <!--中间内容-->
-    <div class="m-container-small m-padded-tb-big">
+    <div class="m-container m-padded-tb-big">
         <!--container 响应移动端-->
         <div class="ui container">
-            <form action="#" method="post" class="ui form">
+            <form id="blog-form" th:action="@{/admin/blogs}" method="post" class="ui form">
+                <input type="hidden" name="published">
                 <div class="required field">
                     <div class="ui left labeled input">
                         <!--compact 边框适应文本长度-->
@@ -77,7 +78,7 @@
                     </div>
                 </div>
 
-                <div class="field">
+                <div class="required field">
                     <!--style="z-index: 1!important;" 叠放层次放在最上层 这样markdown编辑全屏不会被挡到 -->
                     <div id="md-content" style="z-index: 1!important;">
                         <!--style="display: none" -->
@@ -85,17 +86,16 @@
                     </div>
                 </div>
                 <div class="two fields">
-                    <div class="field">
+                    <div class="required field">
                         <div class="ui left labeled action input">
                             <label  class="ui compact teal basic label">分类</label>
                             <!--fluid 占满宽度（一半）-->
                             <div class="ui fluid selection dropdown">
-                                <input type="hidden" name="type">
+                                <input type="hidden" name="type.id">
                                 <i class="dropdown icon"></i>
                                 <div class="default text">分类</div>
                                 <div class="menu">
-                                    <div class="item" data-value="1">错误日志</div>
-                                    <div class="item" data-value="2">错误手册</div>
+                                    <div th:each="type : ${types}" class="item" data-value="1" th:data-value="${type.id}" th:text="${type.name}">开发者手册</div>
                                 </div>
                             </div>
                         </div>
@@ -105,22 +105,24 @@
                             <label  class="ui compact teal basic label">标签</label>
                             <!--multiple多选  search可搜索-->
                             <div class="ui fluid multiple search selection dropdown">
-                                <input type="hidden" name="tag">
+                                <input type="hidden" name="tagIds">
                                 <i class="dropdown icon"></i>
                                 <div class="default text">标签</div>
                                 <div class="menu">
-                                    <div class="item" data-value="1">java</div>
+                                    <div th:each="tag : ${tags}" class="item" th:data-value="${tag.id}" th:text="${tag.name}">java</div>
+                                    <!--/*-->
                                     <div class="item" data-value="2">JS</div>
+                                    <!--*/-->
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="field">
+                <div class="required field">
                     <div class="ui left labeled input">
                         <label  class="ui teal basic label">首图</label>
-                        <input type="text" name="indexPicture" placeholder="首图引用地址">
+                        <input type="text" name="firstPicture" placeholder="首图引用地址">
                     </div>
 
                 </div>
@@ -136,8 +138,8 @@
                     <div class="field">
                         <div class="ui checkbox">
                             <!--hidden 默认不选中-->
-                            <input type="checkbox" id="shareInfo" name="shareInfo" class="hidden" >
-                            <label for="shareInfo">转载声明</label>
+                            <input type="checkbox" id="shareStatement" name="shareStatement" class="hidden" >
+                            <label for="shareStatement">转载声明</label>
                         </div>
                     </div>
                     <div class="field">
@@ -150,8 +152,8 @@
                     <div class="field">
                         <div class="ui checkbox">
                             <!--hidden 默认不选中-->
-                            <input type="checkbox" id="comment" name="comment" class="hidden" >
-                            <label for="comment">评论</label>
+                            <input type="checkbox" id="commentabled" name="commentabled" class="hidden" >
+                            <label for="commentabled">评论</label>
                         </div>
                     </div>
 
@@ -164,8 +166,8 @@
                 <div class="ui right aligned container">
                     <!--onclick="window.history.go(-1)" 返回上个页面-->
                     <button type="button" class="ui button" onclick="window.history.go(-1)">返回</button>
-                    <button class="ui secondary button">保存</button>
-                    <button class="ui teal button">发布</button>
+                    <button type="button" id="save-btn" class="ui secondary button">保存</button>
+                    <button type="button" id="publish-btn" class="ui teal button">发布</button>
 
                 </div>
             </form>
@@ -173,7 +175,7 @@
     </div>
 <!--底部-->
     <!--vertical 去掉圆角-->
-    <footer class="ui inverted vertical segment m-padded-tb-massive" >
+    <footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive" >
         <!--center aligned 居中-->
         <div class="ui center aligned container">
             <div class="ui inverted divided stackable grid">
@@ -212,10 +214,11 @@
         </div>
 
     </footer>
+<!--/*/<th:block th:replace="admin/_fragments :: script">/*/-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-
 <script src="../../static/lib/editormd/editormd.min.js"></script>
+<!--/*/</th:block>/*/-->
 
 <script>
     /*初始化markdown编辑器*/
@@ -225,7 +228,8 @@
             width   : "100%",
             height  : 640,
             syncScrolling : "single",
-            path    : "../static/lib/editormd/lib/"
+            // path    : "../static/lib/editormd/lib/"
+            path    : "/lib/editormd/lib/"
         });
 
         /*
@@ -259,8 +263,38 @@
                     prompt : '标题：请输入博客标题'
 
                 }]
+            },
+            content : {
+                identifier: 'content',
+                rules : [{
+                    type : 'empty',
+                    prompt: '请输入内容'
+                }]
+            },
+            typeId : {
+                identifier: 'typeId',
+                rules : [{
+                    type : 'empty',
+                    prompt: '请输入分类'
+                }]
+            },
+            firstPicture : {
+                identifier: 'firstPicture',
+                rules : [{
+                    type : 'empty',
+                    prompt: '请输入首图'
+                }]
             }
         }
+    });
+    
+    $('#save-btn').click(function () {
+        $('[name="published"]').val(false);
+        $('#blog-form').submit();
+    });
+    $('#publish-btn').click(function () {
+        $('[name="published"]').val(true);
+        $('#blog-form').submit();
     });
 </script>
 </body>
