--- a/src/main/resources/templates/admin/tags-input.html
+++ b/src/main/resources/templates/admin/tags-input.html
@@ -135,7 +135,7 @@
 
     </footer>
 <!-- 左右加/*/ 在html中是注释，但是模板中有效-->
-<!--/*/<th:block th:replace="_fragments :: script">/*/-->
+<!--/*/<th:block th:replace="admin/_fragments :: script">/*/-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 <!--/*/</th:block>/*/-->
