--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -137,6 +137,12 @@
                     </tr>
                 </tfoot>
             </table>
+            <!--消息提示-->
+            <div class="ui success message" th:unless="${#strings.isEmpty(message)}">
+                <i class="close icon"></i>
+                <div class="header">提示：</div>
+                <p th:text="${message}">恭喜，操作成功</p>
+            </div>
             </div>
 
         </div>
@@ -215,7 +221,17 @@
     }
     
     $('#search-btn').click(function () {
+        // 搜索的时候应该先把页数归0
+        $('[name="page"]').val(0);
         loaddata();
+    });
+    
+    
+    $('.message .close')
+    .on('click',function () {
+        $(this)
+        .closest('.message')
+        .transition('fade')
     });
 </script>
 </body>
