--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -224,6 +224,8 @@
                 </div>
                 <!--ui form 表格样式-->
                 <div class="ui form">
+                    <input type="text" name="blog.id" th:value="${blog.id}">
+                    <input type="text" name="parentComment.id" th:value="-1">
                     <div class="field">
                         <textarea name="content" placeholder="请输入评论信息..." id="" cols="30" rows="10"></textarea>
                     </div>
@@ -242,7 +244,7 @@
                             </div>
                         </div>
                         <div class="field m-mobile-wide margin-bottom-small">
-                            <button class="ui teal m-mobile-wide button"> <i class="edit icon"></i>发布</button>
+                            <button id="submitpost-btn" type="button" class="ui teal m-mobile-wide button"> <i class="edit icon"></i>发布</button>
                         </div>
 
                     </div>
@@ -390,7 +392,44 @@
                 $('#toolbar').hide(500);
             }
         }
-    })
+    });
+    
+    $('.ui.form').form({
+        fields: {
+            content: {
+                identifier: 'content',
+                rules:[{
+                    type:'empty',
+                    prompt:'请输入评论内容'
+                }]
+            },
+            nickname: {
+                identifier: 'nickname',
+                rules:[{
+                    type:'empty',
+                    prompt:'请输入你的昵称'
+                }]
+            },
+            email: {
+                identifier: 'email',
+                rules:[{
+                    type:'email',
+                    prompt:'请输入正确的邮箱地址'
+                }]
+            }
+        }
+    });
+    
+    $('#submitpost-btn').click(function () {
+        // 校验表单
+       var boo = $('.ui.form').form('validate form');
+       if ( boo){
+           console.log('校验成功');
+       } else {
+           console.log('校验失败');
+       }
+       
+    });
 
 </script>
 </body>
